--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -40,10 +40,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.android.support:design:25.0.1'
-    compile 'io.reactivex:rxjava:1.1.5'
-    compile 'io.reactivex:rxandroid:1.2.0'
-    compile 'io.reactivex:rxkotlin:0.55.0'
-    compile 'com.f2prateek.rx.preferences:rx-preferences:1.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.github.salomonbrys.kotson:kotson:2.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
@@ -52,7 +50,6 @@ dependencies {
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: "$kotlin_version"
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: "$kotlin_version"
     compile 'com.colintmiller:simplenosql:0.5.1'
-    compile 'com.github.xmartlabs:RxSimpleNoSQL:-SNAPSHOT'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
@@ -63,6 +60,7 @@ dependencies {
 repositories {
     mavenCentral()
     maven { url "https://jitpack.io" }
+    maven { url "http://dl.bintray.com/kotlin/kotlin-eap-1.1" }
 }
 buildscript {
 }
