--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
