--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':gearshift'
+include ':gearshift', ':mockito-kotlin'
+project(':mockito-kotlin').projectDir = new File('mockito-kotlin/mockito-kotlin')
