--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -70,6 +70,7 @@ dependencies {
 
     testCompile(
             'junit:junit:4.12',
+            'com.squareup.okhttp3:mockwebserver:3.5.0',
             project(":mockito-kotlin")
 
     )
