--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: android
 android:
   components:
+    - platform-tools
+    - tools
     - build-tools-25.0.1
     - android-25
+    - extra-android-m2repository
 branches:
   only:
     - 2.0
