--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.1-M03'
     repositories {
         mavenCentral()
+		jcenter()
         maven {
             url "http://dl.bintray.com/kotlin/kotlin-eap-1.1"
         }
