--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -45,7 +45,7 @@ dependencies {
             "com.android.support:appcompat-v7:$support_version",
             "com.android.support:support-v4:$support_version",
             "com.android.support:design:$support_version",
-            'com.android.support.constraint:constraint-layout:1.0.0-alpha4',
+            //'com.android.support.constraint:constraint-layout:1.0.0-alpha4',
             "io.reactivex.rxjava2:rxjava:$rx_version",
             "io.reactivex.rxjava2:rxandroid:$rx_version",
              'com.google.code.gson:gson:2.6.2',
@@ -71,7 +71,7 @@ dependencies {
     testCompile(
             'junit:junit:4.12',
             'com.squareup.okhttp3:mockwebserver:3.5.0',
-            project(":mockito-kotlin")
+            System.getenv("MOCKITO_KOTLIN_DEP") ?: project(":mockito-kotlin")
 
     )
 
