--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ android:
     - build-tools-25.0.1
     - android-25
     - extra-android-m2repository
+jdk: oraclejdk7
 branches:
   only:
     - 2.0
