--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ android:
     - build-tools-25.0.1
     - android-25
     - extra-android-m2repository
+  licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 jdk: oraclejdk8
 branches:
   only:
