--- a/gearshift/build.gradle
+++ b/gearshift/build.gradle
@@ -38,6 +38,15 @@ kapt {
     generateStubs = true
 }
 
+configurations.all {
+    resolutionStrategy {
+        force(
+                "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}",
+                "org.jetbrains.kotlin:kotlin-reflect:${kotlin_version}"
+        )
+    }
+}
+
 dependencies {
     ext.support_version = "25.0.1"
     ext.dagger_version = "2.8"
@@ -60,7 +69,8 @@ dependencies {
             "org.jetbrains.kotlin:kotlin-reflect:${kotlin_version}",
              'com.colintmiller:simplenosql:0.5.1',
             // "com.google.dagger:dagger:$dagger_version"
-            'com.github.deano2390:MaterialShowcaseView:1.1.0'
+            'com.github.deano2390:MaterialShowcaseView:1.1.0',
+            'org.funktionale:funktionale-option:1.0.0-beta'
     )
 
     kapt(
@@ -83,7 +93,6 @@ dependencies {
             'com.android.support.test:runner:0.5',
             'com.android.support:support-annotations:25.0.1'
     )
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 repositories {
     mavenCentral()
